fix spacing

--- a/style.css
+++ b/style.css
@@ -194,6 +194,9 @@ p {
 .infrastructure-div {
     padding: 40px 0px 0px;
 }
+.infrastructure-div-2 {
+    padding: 40px 0px;
+}
 .slide-div {
     padding: 70px 0px;
 }
